--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+sudo: false
+dist: trusty
 language: python
 python:
   - "2.7"
+notifications:
+  email: false
 install:
     - pip install -r dev_requirements.txt
     - pip install coveralls
