--- a/build
+++ b/build
@@ -17,7 +17,7 @@ coverage run \
   -m unittest discover
 
 # Check that source has correct formatting.
-yapf --diff --recursive --style google ./ --exclude=./third_party/*
+yapf --diff --recursive --style google ./ --exclude=third_party/*
 
 # Run static analysis for Python bugs/cruft.
 pyflakes $(find ./ -type f -name '*.py' | xargs)
