--- a/build
+++ b/build
@@ -2,7 +2,7 @@
 #
 # Build steps to validate the ketohub raw input spider.
 
-# Exit build script on first failure
+# Exit build script on first failure.
 set -e
 
 # Echo commands to stdout.
